2004-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Fix typo in previous patch.

2004-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use automake compilation rules.

2004-01-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Re-add dirstamps to PRE/TMPINSTALL_FILES.
	Add PRE/TMPINSTALL_FILES to CLEANFILES.

2003-12-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add shmdr. Use noinst_DATA instead of TMP_LIBS.

2003-12-18	Joel Sherrill <joel@OARcorp.com>

	* shmdr/addlq.c, shmdr/cnvpkt.c, shmdr/dump.c, shmdr/fatal.c,
	shmdr/getlq.c, shmdr/getpkt.c, shmdr/init.c, shmdr/initlq.c,
	shmdr/intr.c, shmdr/mpci.h, shmdr/mpisr.c, shmdr/poll.c,
	shmdr/README, shmdr/receive.c, shmdr/retpkt.c, shmdr/send.c,
	shmdr/setckvec.c, shmdr/shm_driver.h: Copied from libbsp/shmdr.

2003-12-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: s,${PROJECT_RELEASE}/lib,$(PROJECT_LIB),g.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.

2003-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Fix variant-tmpinstall support.

2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ide/Makefile.am, network/Makefile.am, rtc/Makefile.am, 
	serial/Makefile.am: Remove.
	* Makefile.am: Merge-in Makefile.am above.
	Add preinstallation + compilation dirstamp support.

2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ide/Makefile.am: Remove all-local: $(ARCH).
	* network/Makefile.am: Remove all-local: $(ARCH).
	* rtc/Makefile.am: Remove all-local: $(ARCH).
	* serial/Makefile.am: Remove all-local: $(ARCH).

2003-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ide/Makefile.am: Use dirstamps for preinstallation. Reformat.
	* network/Makefile.am: Ditto.
	* rtc/Makefile.am: Ditto.
	* serial/Makefile.am: Ditto.

2003-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* network/open_eth.c: Remove #define OPEN_ETH_SUPPORTED (Unused).
