@@ -1,3 +1,7 @@
+2004-01-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Add PREINSTALL_DIRS.
+
 2004-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Add subdir-objects to AUTOMAKE_OPTIONS
